# streamlabs-challenge

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buy_from_stream_labs_store  cmake_install.cmake  liblibstream_labs_store.dylib  main.cpp
assets/: store.json
customer/: Customer.cpp  Customer.h
store/: Product.cpp  Product.h  Store.cpp  Store.h
